<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/backEditInfoStore"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".views.activities.stamper.EditInfoStoreActivity">

    <include
        android:id="@+id/action_bar"
        layout="@layout/action_bar"
        app:layout_constraintBottom_toTopOf="@+id/textViewStoreListAdm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></include>

    <TextView
        android:id="@+id/titleEditInfoStore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/storeEdit"
        android:textAlignment="center"
        android:textColor="@color/cyanLighten4"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/carPriceEditInfoStore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/carPriceEditInfoStore"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:background="@drawable/inputs"
        android:ems="10"
        android:hint="@string/unitCarPrice"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/motoPriceEditInfoStore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleEditInfoStore" />

    <EditText
        android:id="@+id/motoPriceEditInfoStore"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:background="@drawable/inputs"
        android:ems="10"
        android:hint="@string/unitMotoPrice"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/phoneEditInfoStore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carPriceEditInfoStore" />

    <EditText
        android:id="@+id/phoneEditInfoStore"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:background="@drawable/inputs"
        android:ems="10"
        android:hint="@string/storePhone"
        android:inputType="phone"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/buttonEditInfoStore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/motoPriceEditInfoStore" />

    <Button
        android:id="@+id/buttonEditInfoStore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/botoes"
        android:text="@string/save"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneEditInfoStore" />
</androidx.constraintlayout.widget.ConstraintLayout>