<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/backStoreRegister"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".views.activities.adm.StoreRegisterActivity">

    <include
        android:id="@+id/action_bar"
        layout="@layout/action_bar"
        app:layout_constraintBottom_toTopOf="@+id/textViewStoreRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></include>

    <EditText
        android:id="@+id/nameStoreRegister"
        android:layout_width="350dp"
        android:layout_height="35dp"
        android:background="@drawable/inputs"
        android:ems="10"
        android:hint="@string/nome_fantasia"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/carPriceStoreRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewStoreRegister" />

    <TextView
        android:id="@+id/textViewStoreRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alike_angular"
        android:text="Cadastrar loja"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textColor="@color/cyanLighten4"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/nameStoreRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/action_bar" />

    <EditText
        android:id="@+id/motoPriceStoreRegister"
        android:layout_width="350dp"
        android:layout_height="35dp"
        android:background="@drawable/inputs"
        android:ems="10"
        android:hint="@string/motoPrice"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/locationStoreRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carPriceStoreRegister" />

    <EditText
        android:id="@+id/locationStoreRegister"
        android:layout_width="350dp"
        android:layout_height="35dp"
        android:background="@drawable/inputs"
        android:ems="10"
        android:hint="@string/location"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/cnpjStoreRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/motoPriceStoreRegister" />

    <EditText
        android:id="@+id/cnpjStoreRegister"
        android:layout_width="350dp"
        android:layout_height="35dp"
        android:background="@drawable/inputs"
        android:ems="10"
        android:hint="@string/cnpj"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/celStoreRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationStoreRegister" />

    <Button
        android:id="@+id/saveStoreRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/botoes"
        android:text="@string/save"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/backActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/celStoreRegister" />

    <EditText
        android:id="@+id/carPriceStoreRegister"
        android:layout_width="350dp"
        android:layout_height="35dp"
        android:background="@drawable/inputs"
        android:ems="10"
        android:hint="@string/carPrice"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/motoPriceStoreRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameStoreRegister" />

    <EditText
        android:id="@+id/celStoreRegister"
        android:layout_width="350dp"
        android:layout_height="35dp"
        android:background="@drawable/inputs"
        android:ems="10"
        android:hint="@string/telefone"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/saveStoreRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cnpjStoreRegister" />

    <ImageView
        android:id="@+id/backActivity"
        android:layout_width="51dp"
        android:layout_height="51dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/saveStoreRegister"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/icone_back_button" />

</androidx.constraintlayout.widget.ConstraintLayout>